Update breadcrumb styles. Fix amazon smile slider jumping to page top....
amazon slider tab was jumping viewport to page top on click.

--- a/assets/scss/0-tools/_bootstrap-overrides.scss
+++ b/assets/scss/0-tools/_bootstrap-overrides.scss
@@ -14,3 +14,7 @@
 .nav-tabs .nav-link.active {
   border-color: $grey-5 $grey-5 $white;
 }
+
+.nav-tabs .nav-link.active {
+  background-color: $ochre-tint;
+}
