--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -54,6 +54,8 @@ $slide-bg: $white;            // Background color for the upcoming games slick s
 $sub-nav-heading: $white;     // Font color for h1.page-heading heading of sub-nav
 $nav-link: $white;            // Color for nav-link-main links in mega-nav
 $tan-accent: #fcf1d6;
+$ochre: #f4d081;
+$ochre-tint: #fbedcf;
 $orange-heading: #f99e1b;
 $smile-orange: #ff9901;
 
