--- a/assets/scss/2-modules/_breadcrumb.scss
+++ b/assets/scss/2-modules/_breadcrumb.scss
@@ -3,3 +3,9 @@
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
+.breadcrumb__border {
+  border-color: $grey-5;
+  border-style: solid;
+  border-width: 1px;
+}
